packages/site/styles/app.css
@import "tailwindcss/base";
@import "tailwindcss/components";
@import "tailwindcss/utilities";

@font-face {
  font-family: Whitney;
  font-style: normal;
  font-weight: 300;
  src: url(/fonts/whitney-300.woff), url(/fonts/whitney-300.woff2);
  font-display: swap;
}

@font-face {
  font-family: Whitney;
  font-style: normal;
  font-weight: 400;
  src: url(/fonts/whitney-400.woff), url(/fonts/whitney-400.woff2);
  font-display: swap;
}

@font-face {
  font-family: Whitney;
  font-style: normal;
  font-weight: 500;
  src: url(/fonts/whitney-500.woff), url(/fonts/whitney-500.woff2);
  font-display: swap;
}

@font-face {
  font-family: Whitney;
  font-style: normal;
  font-weight: 600;
  src: url(/fonts/whitney-600.woff), url(/fonts/whitney-600.woff2);
  font-display: swap;
}

@font-face {
  font-family: Whitney;
  font-style: normal;
  font-weight: 700;
  src: url(/fonts/whitney-700.woff), url(/fonts/whitney-700.woff2);
  font-display: swap;
}

.scrollbar-none {
  /* Firefox */
  scrollbar-width: none;
  /* IE */
  -ms-overflow-style: none;
}

.scrollbar-none::-webkit-scrollbar {
  /* Chrome */
  @apply w-0 h-0 bg-transparent;
}

/* react-modal opening & closing animations */
.ReactModal__Overlay {
  opacity: 0;
  transition: opacity 100ms ease-in-out;
}

.ReactModal__Overlay--after-open {
  opacity: 1;
}

.ReactModal__Overlay--before-close {
  opacity: 0;
}

.ReactModal__Content {
  transform: scale(0.7);
  opacity: 0;
  transition: all 100ms ease-in-out;
}

.ReactModal__Content--after-open {
  opacity: 1;
  transform: scale(1);
}

.ReactModal__Content--before-close {
  opacity: 0;
  transform: scale(0.7);
}

/* Remove arrow icon - thanks https://stackoverflow.com/a/6202729 */
details summary.marker-none::-webkit-details-marker {
  display: none;
}

/* Scrollbars - thanks https://css-tricks.com/the-current-state-of-styling-scrollbars-in-css/ */
@layer utilities {
  * {
    @apply [scrollbar-color:#C5C9CD_#EBEDEF] dark:[scrollbar-color:#1A1B1E_#2B2D31];
  }

  *::-webkit-scrollbar {
    @apply w-[10px] h-[10px] rounded-full;
  }

  /* Foreground */
  *::-webkit-scrollbar-thumb {
    @apply bg-[#C5C9CD] dark:bg-[#1A1B1E] rounded-full
  }

  /* Background */
  *::-webkit-scrollbar-track {
    @apply bg-[#EBEDEF] dark:bg-[#2B2D31] rounded-full
  }
}

